# endogenous_network

./: .env  .gitignore  README.md  hill_optimizer.sh  network_analysis.sh  pyproject.toml  requirements.txt
code_raw/: README.md  attractors_without_nodes.py  network_frame.py  network_rewiring.py
data/: network.txt  network_cancer.txt  network_neuron.txt  value.txt  value_cancer.txt
results_dev/: attractors.txt  gene_mapping.txt
results_dev/0/: network_without_0.txt
results_dev/analysis/: comprehensive_report.txt
results_dev/hill_analysis/: hill_coefficient_analysis.csv
results_dev/hill_analysis copy/: optimization_report.txt
results_dev/stability_analysis/: optimization_runs.csv  statistics.txt
scripts/: generate_config.py
src/: attractor_analysis copy.py  attractor_analysis.py  hill_coefficient_optimizer.py  hill_stability_analysis.py  network_frame.py  network_rewiring.py  visualize_attractors.py
